# ignuit

./: .gitignore  AUTHORS  COPYING.extras  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  configure  configure.ac  configure.in
data/: Makefile.am  Makefile.in  ignuit.appdata.xml  ignuit.desktop.in  ignuit.schemas.in  org.jensge.ignuit.gschema.xml
data/export/: Granule.xsl  Mnemosyne.xsl  Pauker.xsl  jMemorize.xsl
data/glade/: category_properties.glade  editor.glade  find.glade  main.glade  preferences.glade  properties.glade  quiz.glade  tagger.glade
data/icons/: Makefile.am  Makefile.in
data/icons/16x16/: Makefile.in
data/icons/16x16/actions/: Makefile.am  Makefile.in
data/icons/22x22/: Makefile.am  Makefile.in
data/icons/22x22/actions/: Makefile.am  Makefile.in
data/icons/24x24/: Makefile.in
data/icons/24x24/actions/: Makefile.am  Makefile.in
data/icons/32x32/: Makefile.in
data/icons/32x32/actions/: Makefile.am  Makefile.in
data/icons/48x48/: Makefile.am  Makefile.in
data/icons/48x48/apps/: Makefile.am  Makefile.in
data/icons/scalable/: Makefile.am  Makefile.in
data/icons/scalable/actions/: Makefile.am  Makefile.in
data/icons/scalable/apps/: Makefile.am  Makefile.in
data/import/: Granule.xsl  KVocTrain_1.0.xsl  Mnemosyne.xsl  Pauker.xsl  jMemorize.xsl
doc/: Makefile.am  Makefile.in  ignuit.1  ignuit.info  ignuit.texi
examples/: countries_and_capitals-en.xml  csv_import_test.csv  example_latex.xml  numbers_days_months-en_ru.xml
help/: Makefile.am  Makefile.in  ignuit.omf.in
help/C/: ignuit.xml
po/: LINGUAS  POTFILES.in  POTFILES.skip  de.po  en_US.po  ru.po
src/: Makefile.am  Makefile.in  app-window.c  app-window.h  audio.c  audio.h  card.c  card.h  csvio.c  csvio.h  dialog-about.c  dialog-about.h  dialog-category-properties.c  dialog-category-properties.h  dialog-editor.c  dialog-editor.h  dialog-find.c  dialog-find.h  dialog-preferences.c  dialog-preferences.h  dialog-properties.c  dialog-properties.h  dialog-quiz.c  dialog-quiz.h  dialog-tagger.c  dialog-tagger.h  file.c  file.h  fileio.c  fileio.h  latex.c  latex.h  main.c  main.h  prefs.c  prefs.h  textview.c  textview.h
