# Copyright (C) 2009 Timothy Richard Musson

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.


include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = ignuit
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_FIGURES = \
    figures/main-window.png             \
    figures/editor-dialog.png           \
    figures/editor-dialog2.png          \
    figures/quiz-dialog.png             \
    figures/properties-dialog.png       \
    figures/preferences-appearance.png  \
    figures/preferences-schedules.png   \
    figures/preferences-other.png       \
    figures/quiz-menu.png

DOC_LINGUAS = 

